--- a/index.html
+++ b/index.html
@@ -2,23 +2,53 @@
 <html lang="en">
 
 <!--
-WRITTEN BY: Your name here
-EMAIL: Your email here
+WRITTEN BY: Youssef Dessouky
+EMAIL: Ydessouk@uci.edu
 -->
 
 <head>
   <meta charset="utf-8">
-  <meta name="author" content="Your name here">
-  <meta name="description" content="description of your page">
-   <!-- you would link to an external stylesheet here! -->
-   <!-- you would also link to Bootstrap here! -->
-  <title>title here</title>
+  <meta name="author" content="Youssef Dessouky">
+  <meta name="description" content="Personal portfolio front page">
+  <link rel="stylesheet" href="pimped.css">
+  <title>My Portfolio</title>
 </head>
 <body>
-  <p>
-    <a href="http://validator.w3.org/check?uri=referer">
-       W3C validator
-    </a>
-  </p>
+  <header>
+    <img src="IMG_1357.jpg" alt="Youssef Dessouky" class="profile-photo">
+    <h1>Youssef Dessouky</h1>
+    <p>Major: Informatics, B.S.<br>Specialization: Health Informatics</p>
+  </header>
+
+  <nav>
+    <ul>
+      <li><a href="resume.html">Resume</a></li>
+      <li><a href="mailto:Ydessouk@uci.edu">Email</a></li>
+      <li><a href="https://github.com/Steb101" target="_blank">GitHub</a></li>
+    </ul>
+  </nav>
+
+  <section id="hobbies">
+    <h2>Hobbies & Personal Interests</h2>
+    <ul>
+      <li>Basketball</li>
+      <li>Wrestling</li>
+      <li>Jiujitsu</li>
+      <li>Skating</li>
+      <li>Cooking</li>
+      <li>Music Production</li>
+      <li>Traveling/Exploring</li>
+    </ul>
+  </section>
+
+  <footer>
+    <p>
+      <a href="http://jigsaw.w3.org/css-validator/check/referer">
+        <img style="border:0;width:88px;height:31px"
+             src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
+             alt="Valid CSS!" />
+      </a>
+    </p>
+  </footer>
 </body>
 </html>
