--- a/resume.html
+++ b/resume.html
@@ -1,70 +1,91 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="utf-8">
-  <meta name="author" content="Youssef Dessouky">
-  <meta name="description" content="Youssef Dessouky's Resume">
-  <link rel="stylesheet" href="pimped.css">
-  <title>Resume - Youssef Dessouky</title>
+  <meta charset="UTF-8">
+  <title>Resume | Youssef Dessouky</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="base.css">
+  <link rel="stylesheet" href="navbar.css">
+  <link rel="stylesheet" href="resume.css">
 </head>
 <body>
-  <header>
-    <h1>Youssef Dessouky</h1>
-    <p>Informatics, B.S., Specialization in Health Informatics</p>
-  </header>
 
-  <section>
-    <h2>Contact</h2>
-    <p>Phone: 909-286-3282<br>Email: Dessouky2003@gmail.com</p>
-  </section>
+<nav class="navbar custom-navbar">
+  <div class="nav-center">
+    <a href="index.html" class="nav-brand nav-home-btn">Youssef Dessouky</a>
+    <button class="nav-toggle d-lg-none" aria-label="Toggle navigation">
+      &#9776;
+    </button>
+  </div>
+  <div class="nav-links">
+    <a href="resume.html" class="active">Resume</a>
+    <a href="mailto:Dessouky2003@gmail.com">Contact</a>
+  </div>
+</nav>
+<div class="mobile-menu">
+  <a href="index.html">Home</a>
+  <a href="resume.html">Resume</a>
+  <a href="mailto:Dessouky2003@gmail.com">Contact</a>
+</div>
 
-  <section>
-    <h2>Education</h2>
-    <p>University of California, Irvine (2021 - Present)</p>
-  </section>
+<div class="container my-5 resume-content">
+  <h2>Education</h2>
+  <p>
+    <strong>University of California, Irvine</strong><br>
+    <strong>Bachelor of Science in Informatics</strong><br>
+    <strong>Specializations: Health Informatics, Human-Computer Interaction (HCI)</strong>
+  </p>
 
-  <section>
-    <h2>Work Experience</h2>
-    <h3>Software Engineering, UCI Housing (August 2022 - June 2023)</h3>
-    <p>Supervised a dorm hall of 50+ residents, provided community building, and offered conflict resolution.</p>
+  <h2>Technical Skills</h2>
+  <ul>
+    <li><strong>Programming Languages:</strong> Python, Java, SQL, R, HTML, CSS, JavaScript</li>
+    <li><strong>Frameworks & Libraries:</strong> React, Flask, ggplot2, dplyr</li>
+    <li><strong>IDEs & Tools:</strong> PyCharm, VS Code, IntelliJ IDEA, Docker, Git</li>
+    <li><strong>Software Suites:</strong> Google Workspace, Microsoft Office Suite</li>
+    <li><strong>Concepts:</strong> Machine Learning, AI, Data Analysis, Network Engineering, Communication</li>
+  </ul>
 
-    <h3>Manager, Taco Bell (January 2021 - June 2021; June 2022 - August 2023)</h3>
-    <p>Managed store operations, led and trained employees, and handled customer relations.</p>
-  </section>
+  <h2>Projects</h2>
+  <ul>
+    <li><strong>WiFi Connectivity Simulator:</strong> Python-based simulation of intelligent WiFi roaming.</li>
+    <li><strong>Airport Landing Scheduler:</strong> Optimized scheduling using SQL and binary data handling.</li>
+  </ul>
 
-  <section>
-    <h2>Classes</h2>
-    <ul>
-      <li>ICS 31 Intro to Programming</li>
-      <li>ICS 32 Programming with Software Libraries</li>
-      <li>ICS 33 Intermediate Programming</li>
-      <li>ICS 45J Programming in Java</li>
-      <li>ICS 6B Discrete Logic</li>
-      <li>ICS 51</li>
-      <li>ICS 6N</li>
-    </ul>
-  </section>
+  <h2>Experience</h2>
+  <ul>
+    <li><strong>RA</strong> - UCI Housing<br>
+      Supervised 50+ students, conducted classes on interpersonal skills.
+    </li>
+    <li><strong>Manager</strong> - Taco Bell<br>
+      Managed operations, employee training, and conflict resolution.
+    </li>
+    <li><strong>Delivery Driver</strong> - UberEats/Postmates<br>
+      Maintained a 5-star customer rating.
+    </li>
+  </ul>
 
-  <section>
-    <h2>Projects</h2>
-    <ul>
-      <li>Developed messenger chat</li>
-      <li>Simulated propagation system</li>
-      <li>Developed an app for searching continents, countries, and regions</li>
-      <li>WiFi roaming simulation</li>
-      <li>Database creation/maintenance</li>
-    </ul>
-  </section>
+  <h2>Languages</h2>
+  <p>
+    <strong>English</strong> (Fluent), <strong>Arabic</strong> (Proficient)
+  </p>
 
-  <section>
-    <h2>Languages</h2>
-    <p>Python, Java (advanced); HTML, CSS, C, SQL (intermediate)</p>
-  </section>
+  <h2>Career Interests</h2>
+  <ul>
+    <li>Network Engineering</li>
+    <li>Backend Software Development</li>
+    <li>Full-Stack Development</li>
+    <li>Data Engineering</li>
+    <li>Health Informatics</li>
+    <li>Cloud Systems</li>
+  </ul>
+</div>
 
-  <section>
-    <h2>Skills</h2>
-    <p>Communication, Leadership, Computer Hardware</p>
-  </section>
+<footer class="text-center py-3">
+  &copy; 2003 Youssef Dessouky
+</footer>
+
+<script src="scripts.js"></script>
 </body>
 </html>
