Implemented Mobile fixes

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </div>
 
 <header class="text-center my-5">
-  <img src="images/IMG_1357.jpg" class="profile-img rounded-circle border border-4 border-accent">
+  <img src="images/IMG_1357.jpg" class="profile-img rounded-circle border border-4 border-accent" alt="Profile picture of Youssef Dessouky">
   <h1 class="mt-3">Youssef Dessouky</h1>
   <p>University of California, Irvine | Informatics, B.S.</p>
   <p>Specializations: Health Informatics, Human-Computer Interaction (HCI)</p>
@@ -41,19 +41,19 @@
 <div class="image-gallery">
   <div class="gallery-row left">
     <div class="gallery-item left">
-      <img src="images/mountain.png">
+      <img src="images/mountain.png" alt="Mountain landscape">
       <div class="gallery-text">Exploring nature is where I recharge!</div>
     </div>
   </div>
   <div class="gallery-row right">
     <div class="gallery-item right">
-      <img src="images/museum.png">
+      <img src="images/museum.png" alt="Museum artwork">
       <div class="gallery-text">Art inspires tech creativity.</div>
     </div>
   </div>
   <div class="gallery-row left">
     <div class="gallery-item left">
-      <img src="images/pyramid.png">
+      <img src="images/pyramid.png" alt="Pyramids of Egypt">
       <div class="gallery-text">Proud Egyptian, rooted in heritage.</div>
     </div>
   </div>
