--- a/index.html
+++ b/index.html
@@ -1,68 +1,12 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Youssef Dessouky</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="base.css">
-  <link rel="stylesheet" href="navbar.css">
-  <link rel="stylesheet" href="home.css">
-</head>
-<body>
-
-<nav class="navbar custom-navbar">
-  <div class="nav-center">
-    <a href="index.html" class="nav-brand nav-home-btn">Youssef Dessouky</a>
-    <button class="nav-toggle d-lg-none" aria-label="Toggle navigation">
-      &#9776;
-    </button>
-  </div>
-  <div class="nav-links">
-    <a href="resume.html">Resume</a>
-    <a href="mailto:Dessouky2003@gmail.com">Contact</a>
-  </div>
-</nav>
-<div class="mobile-menu">
-  <a href="index.html">Home</a>
-  <a href="resume.html">Resume</a>
-  <a href="mailto:Dessouky2003@gmail.com">Contact</a>
-</div>
-
-<header class="text-center my-5">
-  <img src="images/IMG_1357.jpg" class="profile-img rounded-circle border border-4 border-accent" alt="Profile picture of Youssef Dessouky">
-  <h1 class="mt-3">Youssef Dessouky</h1>
-  <p>University of California, Irvine | Informatics, B.S.</p>
-  <p>Specializations: Health Informatics, Human-Computer Interaction (HCI)</p>
-  <p class="fun-facts">I have a cat and can kickflip</p>
-</header>
-
-<div class="image-gallery">
-  <div class="gallery-row left">
-    <div class="gallery-item left">
-      <img src="images/mountain.png" alt="Mountain landscape">
-      <div class="gallery-text">Exploring nature is where I recharge!</div>
-    </div>
-  </div>
-  <div class="gallery-row right">
-    <div class="gallery-item right">
-      <img src="images/museum.png" alt="Museum artwork">
-      <div class="gallery-text">Art inspires tech creativity.</div>
-    </div>
-  </div>
-  <div class="gallery-row left">
-    <div class="gallery-item left">
-      <img src="images/pyramid.png" alt="Pyramids of Egypt">
-      <div class="gallery-text">Proud Egyptian, rooted in heritage.</div>
-    </div>
-  </div>
-</div>
-
-<footer class="text-center py-3">
-  &copy; 2003 Youssef Dessouky
-</footer>
-
-<script src="scripts.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Youssef Dessouky</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
